Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="MainMemory : Main Memory Database with Generic Server Framework">
+    <meta name="description" content="MainMemory.IO : Generic Server Framework and In-Memory Database">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>MainMemory</title>
+    <title>MainMemory.IO</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/ademakov/MainMemory">View on GitHub</a>
 
-          <h1 id="project_title">MainMemory</h1>
-          <h2 id="project_tagline">Main Memory Database with Generic Server Framework</h2>
+          <h1 id="project_title">MainMemory.IO</h1>
+          <h2 id="project_tagline">Generic Server Framework and In-Memory Database</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/ademakov/MainMemory/zipball/master">Download this project as a .zip file</a>
@@ -135,7 +135,7 @@ single-threaded build. Otherwise the multi-threaded build is preferred.</p>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">MainMemory maintained by <a href="https://github.com/ademakov">ademakov</a></p>
+        <p class="copyright">MainMemory.IO maintained by <a href="https://github.com/ademakov">ademakov</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
